--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.1.5",
+    "express-xss-sanitizer": "^1.1.9",
     "fs-extra": "^11.2.0",
+    "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
@@ -28,7 +31,9 @@
     "nodemailer": "^6.9.9",
     "sharp": "^0.33.2",
     "slugify": "^1.6.6",
-    "uniqid": "^5.4.0"
+    "swagger-ui-express": "^5.0.0",
+    "uniqid": "^5.4.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
